test_regress/t/t_param_type_fwd_bad.out
%Error: t/t_param_type_fwd_bad.v:25:10: Parameter type expression type 'int' violates parameter's forwarding type 'enum'
                                      : ... note: In instance 't'
   25 |   sub #(.E_t(int_t), .S_t(int_t), .U_t(int_t), .C_t(int_t), .IC_t(int_t)) sub();
      |          ^~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: t/t_param_type_fwd_bad.v:25:23: Parameter type expression type 'int' violates parameter's forwarding type 'struct'
                                      : ... note: In instance 't'
   25 |   sub #(.E_t(int_t), .S_t(int_t), .U_t(int_t), .C_t(int_t), .IC_t(int_t)) sub();
      |                       ^~~
%Error: t/t_param_type_fwd_bad.v:25:36: Parameter type expression type 'int' violates parameter's forwarding type 'union'
                                      : ... note: In instance 't'
   25 |   sub #(.E_t(int_t), .S_t(int_t), .U_t(int_t), .C_t(int_t), .IC_t(int_t)) sub();
      |                                    ^~~
%Error: t/t_param_type_fwd_bad.v:25:49: Parameter type expression type 'int' violates parameter's forwarding type 'class'
                                      : ... note: In instance 't'
   25 |   sub #(.E_t(int_t), .S_t(int_t), .U_t(int_t), .C_t(int_t), .IC_t(int_t)) sub();
      |                                                 ^~~
%Error: t/t_param_type_fwd_bad.v:25:62: Parameter type expression type 'int' violates parameter's forwarding type 'interface class'
                                      : ... note: In instance 't'
   25 |   sub #(.E_t(int_t), .S_t(int_t), .U_t(int_t), .C_t(int_t), .IC_t(int_t)) sub();
      |                                                              ^~~~
%Error: t/t_param_type_fwd_bad.v:26:10: Parameter type expression type 'int' violates parameter's forwarding type 'enum'
                                      : ... note: In instance 't'
   26 |   Cls #(.E_t(int_t), .S_t(int_t), .U_t(int_t), .C_t(int_t), .IC_t(int_t)) c;
      |          ^~~
%Error: t/t_param_type_fwd_bad.v:26:23: Parameter type expression type 'int' violates parameter's forwarding type 'struct'
                                      : ... note: In instance 't'
   26 |   Cls #(.E_t(int_t), .S_t(int_t), .U_t(int_t), .C_t(int_t), .IC_t(int_t)) c;
      |                       ^~~
%Error: t/t_param_type_fwd_bad.v:26:36: Parameter type expression type 'int' violates parameter's forwarding type 'union'
                                      : ... note: In instance 't'
   26 |   Cls #(.E_t(int_t), .S_t(int_t), .U_t(int_t), .C_t(int_t), .IC_t(int_t)) c;
      |                                    ^~~
%Error: t/t_param_type_fwd_bad.v:26:49: Parameter type expression type 'int' violates parameter's forwarding type 'class'
                                      : ... note: In instance 't'
   26 |   Cls #(.E_t(int_t), .S_t(int_t), .U_t(int_t), .C_t(int_t), .IC_t(int_t)) c;
      |                                                 ^~~
%Error: t/t_param_type_fwd_bad.v:26:62: Parameter type expression type 'int' violates parameter's forwarding type 'interface class'
                                      : ... note: In instance 't'
   26 |   Cls #(.E_t(int_t), .S_t(int_t), .U_t(int_t), .C_t(int_t), .IC_t(int_t)) c;
      |                                                              ^~~~
%Error: Exiting due to
